--- a/Apply_Monodept.ipynb
+++ b/Apply_Monodept.ipynb
@@ -9,7 +9,7 @@
         "2t9O5OsJ0UMq",
         "Knb75W9ImFmE"
       ],
-      "authorship_tag": "ABX9TyNGicbxfkjDNwaUzmxBeGR0",
+      "authorship_tag": "ABX9TyOqdwBJJCugCJoku3YIsSrb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,25 +126,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zU-O3lAk6jYK",
-        "outputId": "93eaf918-f476-459e-f8d7-b99f9530ac52"
+        "id": "zU-O3lAk6jYK"
       },
       "source": [
         "%cd /content/drive/MyDrive/SSL/monodepth2"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/MyDrive/SSL/monodepth2\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -399,7 +387,7 @@
         "        self.options = self.parser.parse_args(args=[])\n",
         "        return self.options\n"
       ],
-      "execution_count": 29,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -415,7 +403,7 @@
         "\n",
         "state = {k: v for k, v in opts._get_kwargs()}"
       ],
-      "execution_count": 30,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -425,7 +413,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hq14OEUxn9Ze",
-        "outputId": "001e495a-b93d-4fe6-a419-92e99b44c031"
+        "outputId": "4998402d-ed68-4b5d-fc18-02fd358397ce"
       },
       "source": [
         "import datasets\n",
@@ -454,7 +442,7 @@
         "    val_dataset, opts.batch_size, True,\n",
         "    num_workers=opts.num_workers, pin_memory=True, drop_last=True)\n"
       ],
-      "execution_count": 7,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -1295,7 +1283,7 @@
         "        print('Total conv params: {}, Pruned conv params: {}, Pruned ratio: {}'.format(total, pruned, pruned / total))\n",
         "        # self.val()\n"
       ],
-      "execution_count": 16,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1310,6 +1298,32 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "xppmejUy6stA"
+      },
+      "source": [
+        "rmse được tính dựa trên công thức sau:\n",
+        "gt là độ sâu thực\n",
+        "pred là độ sâu dự đoán\n",
+        "\n",
+        "rmse = (gt - pred) ** 2 \n",
+        "\n",
+        "rmse = torch.sqrt(rmse.mean())\n",
+        "\n",
+        "rmse = Căn trung bình của bình phương sai số giữa độ sâu thực và độ sâu dự đoán"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8fxxjE1X7jkP"
+      },
+      "source": [
+        "Cùng với ngưỡng cắt 50% thì prune theo độ quan trọng layer sẽ cho sai số nhỏ hơn cắt toàn bộ 50%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "C43zJgxrOEfy"
       },
       "source": [
@@ -1319,13 +1333,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hYIXrQdbnzAl"
+        "id": "hYIXrQdbnzAl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e969468f-610c-46aa-ce1a-5c97f949b175"
       },
       "source": [
         "!python evaluate_depth.py --load_weights_folder /content/drive/MyDrive/SSL/monodepth2/newmodel/mono_model/models/weights_3/ --eval_mono"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-> Loading weights from /content/drive/MyDrive/SSL/monodepth2/newmodel/mono_model/models/weights_3/\n",
+            "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
+            "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
+            "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 12 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  cpuset_checked))\n",
+            "-> Computing predictions with size 640x192\n",
+            "-> Evaluating\n",
+            "   Mono evaluation - using median scaling\n",
+            " Scaling ratios | med: 32.542 | std: 0.127\n",
+            "\n",
+            "   abs_rel |   sq_rel |     rmse | rmse_log |       a1 |       a2 |       a3 | \n",
+            "&   0.197  &   1.454  &   6.552  &   0.273  &   0.690  &   0.892  &   0.962  \\\\\n",
+            "\n",
+            "-> Done!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1357,19 +1396,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b64877c-78af-40e2-bc8b-fa8c0a35734d"
+        "outputId": "cf1403bb-ec9e-44fa-a469-cd18edbdbe1a"
       },
       "source": [
         "\n",
         "!python evaluate_depth.py --load_weights_folder newmodel/newmodel/mono_model/models/weights_3/pruned/weights_0/ --eval_mono"
       ],
-      "execution_count": 32,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "newmodel/newmodel/mono_model/models/weights_3/pruned/weights_0\n",
             "-> Loading weights from newmodel/newmodel/mono_model/models/weights_3/pruned/weights_0/\n",
             "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
             "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
@@ -1404,7 +1442,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g6Qmnfqo5cGq",
-        "outputId": "c1022a4e-9a82-462b-c4fb-130c2455a401"
+        "outputId": "55ca70ba-1ab6-440b-e3f3-442622097fc4"
       },
       "source": [
         "trainer = Trainer(opts,train_loader,val_loader)\n",
@@ -1412,7 +1450,7 @@
         "trainer.save_model('constant')\n",
         "!python evaluate_depth.py --load_weights_folder newmodel/newmodel/mono_model/models/weights_3/constant/weights_0/ --eval_mono"
       ],
-      "execution_count": 33,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -1465,9 +1503,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'loss/0': tensor(0.1598, device='cuda:0'), 'loss/1': tensor(0.1597, device='cuda:0'), 'loss/2': tensor(0.1597, device='cuda:0'), 'loss/3': tensor(0.1596, device='cuda:0'), 'loss': tensor(0.1597, device='cuda:0')}\n",
-            "{'loss/0': tensor(0.1598, device='cuda:0'), 'loss/1': tensor(0.1597, device='cuda:0'), 'loss/2': tensor(0.1597, device='cuda:0'), 'loss/3': tensor(0.1596, device='cuda:0'), 'loss': tensor(0.1597, device='cuda:0'), 'de/abs_rel': array(0.19452108, dtype=float32), 'de/sq_rel': array(1.5401381, dtype=float32), 'de/rms': array(7.1259727, dtype=float32), 'de/log_rms': array(0.29522824, dtype=float32), 'da/a1': array(0.68443865, dtype=float32), 'da/a2': array(0.878946, dtype=float32), 'da/a3': array(0.95371425, dtype=float32)}\n",
-            "Result test: Test Loss:  0.15969440 \n",
+            "{'loss/0': tensor(0.1717, device='cuda:0'), 'loss/1': tensor(0.1717, device='cuda:0'), 'loss/2': tensor(0.1717, device='cuda:0'), 'loss/3': tensor(0.1716, device='cuda:0'), 'loss': tensor(0.1717, device='cuda:0')}\n",
+            "{'loss/0': tensor(0.1717, device='cuda:0'), 'loss/1': tensor(0.1717, device='cuda:0'), 'loss/2': tensor(0.1717, device='cuda:0'), 'loss/3': tensor(0.1716, device='cuda:0'), 'loss': tensor(0.1717, device='cuda:0'), 'de/abs_rel': array(0.2086385, dtype=float32), 'de/sq_rel': array(1.5385396, dtype=float32), 'de/rms': array(6.6001234, dtype=float32), 'de/log_rms': array(0.30236572, dtype=float32), 'da/a1': array(0.6685678, dtype=float32), 'da/a2': array(0.86494094, dtype=float32), 'da/a3': array(0.95085454, dtype=float32)}\n",
+            "Result test: Test Loss:  0.17165640 \n",
             "newmodel/newmodel/mono_model/models/weights_3/constant/weights_0\n",
             "-> Loading weights from newmodel/newmodel/mono_model/models/weights_3/constant/weights_0/\n",
             "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
