--- a/Apply_Monodept.ipynb
+++ b/Apply_Monodept.ipynb
@@ -9,7 +9,7 @@
         "2t9O5OsJ0UMq",
         "Knb75W9ImFmE"
       ],
-      "authorship_tag": "ABX9TyN47gAIC3wCy/MKhSkrvvMw",
+      "authorship_tag": "ABX9TyPwErf+P+Ab3E17uPTirKPD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,26 +35,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ui6kQPHkPsJH",
-        "outputId": "730b3a24-4d17-4b05-90f5-f27feba14a9d"
+        "id": "ui6kQPHkPsJH"
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive._mount('/content/drive')\n",
+        "%cd /content/drive/MyDrive/SSL/monodepth2"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -94,100 +83,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C43zJgxrOEfy"
-      },
-      "source": [
-        "##Evaluate origin model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hYIXrQdbnzAl",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "31666268-4173-4598-e2f1-c5e0c1728aaa"
-      },
-      "source": [
-        "!python evaluate_depth.py --load_weights_folder /content/drive/MyDrive/SSL/monodepth2/newmodel/mono_model/models/weights_0/ --eval_mono"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-> Loading weights from /content/drive/MyDrive/SSL/monodepth2/newmodel/mono_model/models/weights_0/\n",
-            "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
-            "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
-            "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 12 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  cpuset_checked))\n",
-            "-> Computing predictions with size 640x192\n",
-            "-> Evaluating\n",
-            "   Mono evaluation - using median scaling\n",
-            " Scaling ratios | med: 47.739 | std: 0.144\n",
-            "\n",
-            "   abs_rel |   sq_rel |     rmse | rmse_log |       a1 |       a2 |       a3 | \n",
-            "&   0.240  &   2.022  &   8.300  &   0.337  &   0.597  &   0.834  &   0.929  \\\\\n",
-            "\n",
-            "-> Done!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "F6s3yvoFOHyK"
-      },
-      "source": [
-        "##Evaluate optimized model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "O5uoC2dXjyVn",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d2374b30-68c7-4b6b-f5ed-0edbe7db422b"
-      },
-      "source": [
-        "!python evaluate_depth.py --load_weights_folder newmodel/mono_model/pruned/weights_0/ --eval_mono"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-> Loading weights from newmodel/mono_model/pruned/weights_0/\n",
-            "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
-            "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
-            "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 12 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  cpuset_checked))\n",
-            "-> Computing predictions with size 640x192\n",
-            "-> Evaluating\n",
-            "   Mono evaluation - using median scaling\n",
-            " Scaling ratios | med: 49.043 | std: 0.141\n",
-            "\n",
-            "   abs_rel |   sq_rel |     rmse | rmse_log |       a1 |       a2 |       a3 | \n",
-            "&   0.250  &   2.203  &   8.785  &   0.357  &   0.572  &   0.819  &   0.917  \\\\\n",
-            "\n",
-            "-> Done!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "BF45tokz3gBw"
       },
       "source": [
-        "##Evaluate origin model epoch1"
+        "##Evaluate origin model"
       ]
     },
     {
@@ -197,10 +96,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g6Qmnfqo5cGq",
-        "outputId": "5c83cdf1-01a2-471a-d6c7-5fe11a02ddf2"
+        "outputId": "18ff6bc3-5683-4b6d-f24c-d9916c8c07a8"
       },
       "source": [
-        "!python evaluate_depth.py --load_weights_folder newmodel/mono_model/models/weights_1/ --eval_mono"
+        "!python evaluate_depth.py --load_weights_folder /content/drive/MyDrive/SSL/monodepth2/models/mono_640x192/ --eval_mono"
       ],
       "execution_count": null,
       "outputs": [
@@ -208,7 +107,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-> Loading weights from newmodel/mono_model/models/weights_1/\n",
+            "-> Loading weights from /content/drive/MyDrive/SSL/monodepth2/models/mono_640x192/\n",
             "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
             "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
             "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 12 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
@@ -216,46 +115,10 @@
             "-> Computing predictions with size 640x192\n",
             "-> Evaluating\n",
             "   Mono evaluation - using median scaling\n",
-            " Scaling ratios | med: 45.131 | std: 0.132\n",
+            " Scaling ratios | med: 31.257 | std: 0.089\n",
             "\n",
             "   abs_rel |   sq_rel |     rmse | rmse_log |       a1 |       a2 |       a3 | \n",
-            "&   0.226  &   1.947  &   8.201  &   0.325  &   0.627  &   0.843  &   0.932  \\\\\n",
-            "\n",
-            "-> Done!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XUhlQjwXoB6t",
-        "outputId": "fd648d71-f250-41b5-b3af-349b089a56d3"
-      },
-      "source": [
-        "!python evaluate_depth.py --load_weights_folder newmodel/mono_model/pruned/weights_1/ --eval_mono"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-> Loading weights from newmodel/mono_model/pruned/weights_1/\n",
-            "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
-            "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
-            "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 12 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  cpuset_checked))\n",
-            "-> Computing predictions with size 640x192\n",
-            "-> Evaluating\n",
-            "   Mono evaluation - using median scaling\n",
-            " Scaling ratios | med: 45.464 | std: 0.154\n",
-            "\n",
-            "   abs_rel |   sq_rel |     rmse | rmse_log |       a1 |       a2 |       a3 | \n",
-            "&   0.242  &   2.143  &   8.574  &   0.344  &   0.591  &   0.826  &   0.923  \\\\\n",
+            "&   0.115  &   0.905  &   4.863  &   0.193  &   0.877  &   0.959  &   0.981  \\\\\n",
             "\n",
             "-> Done!\n"
           ]
@@ -268,7 +131,7 @@
         "id": "v1SGU3TVobZY"
       },
       "source": [
-        "##Evaluate origin model epoch2"
+        "##Evaluate pruned model"
       ]
     },
     {
@@ -277,19 +140,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "TI2t2hp2obZy",
-        "outputId": "08f5373d-89be-4f4c-a035-1c7b88dab578"
+        "id": "XUhlQjwXoB6t",
+        "outputId": "3857272a-1634-4917-a90a-00229694e935"
       },
       "source": [
-        "!python evaluate_depth.py --load_weights_folder newmodel/mono_model/models/weights_2/ --eval_mono"
+        "!python evaluate_depth.py --load_weights_folder /content/drive/MyDrive/SSL/monodepth2/testprune/mono_640x192/models/weights_1/ --eval_mono"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "-> Loading weights from newmodel/mono_model/models/weights_2/\n",
+            "-> Loading weights from /content/drive/MyDrive/SSL/monodepth2/testprune/mono_640x192/models/weights_1/\n",
             "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
             "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
             "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 12 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
@@ -297,46 +160,10 @@
             "-> Computing predictions with size 640x192\n",
             "-> Evaluating\n",
             "   Mono evaluation - using median scaling\n",
-            " Scaling ratios | med: 45.853 | std: 0.156\n",
+            " Scaling ratios | med: 43.111 | std: 0.164\n",
             "\n",
             "   abs_rel |   sq_rel |     rmse | rmse_log |       a1 |       a2 |       a3 | \n",
-            "&   0.222  &   1.722  &   7.186  &   0.302  &   0.647  &   0.863  &   0.946  \\\\\n",
-            "\n",
-            "-> Done!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ApZaCkHaobZz",
-        "outputId": "e1b113be-c3cd-4733-9827-ee33a592eb08"
-      },
-      "source": [
-        "!python evaluate_depth.py --load_weights_folder newmodel/mono_model/pruned/weights_2/ --eval_mono"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-> Loading weights from newmodel/mono_model/pruned/weights_2/\n",
-            "/usr/local/lib/python3.7/dist-packages/torchvision/transforms/transforms.py:288: UserWarning: Argument interpolation should be of type InterpolationMode instead of int. Please, use InterpolationMode enum.\n",
-            "  \"Argument interpolation should be of type InterpolationMode instead of int. \"\n",
-            "/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py:481: UserWarning: This DataLoader will create 12 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  cpuset_checked))\n",
-            "-> Computing predictions with size 640x192\n",
-            "-> Evaluating\n",
-            "   Mono evaluation - using median scaling\n",
-            " Scaling ratios | med: 47.340 | std: 0.150\n",
-            "\n",
-            "   abs_rel |   sq_rel |     rmse | rmse_log |       a1 |       a2 |       a3 | \n",
-            "&   0.227  &   1.810  &   7.538  &   0.313  &   0.633  &   0.854  &   0.941  \\\\\n",
+            "&   0.443  &   4.760  &  12.082  &   0.588  &   0.303  &   0.560  &   0.766  \\\\\n",
             "\n",
             "-> Done!\n"
           ]
